# microhh

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  NOTES  README.md  TODO
4th/: 4thorder.wxm  4thorderstencils_noghost.wxm  4thordertaylorstencils.wxm  convergence.py  divgrad.py  divgradbcdir.py  divgradbcneu.py  grad.py  gradbcdir.py  gradbcneu.py  interpbcdir.py  interpbcneu.py  lapl.py  laplbcdir.py  laplbcneu.py  spectral.py
cases/: README.md  chan180.reystress  messages.py  microhh.ini  moser180.ini  moser180prof.py  moser180stats.py  moser600.ini  run_all.py  run_all.sh  run_ci_tests.py  run_restart_set.py  run_small_set.py  run_travis.py  taylorgreen.ini  taylorgreenprof.py  taylorgreenstats.py
cases/arm/: run.sh  (+7 more)
cases_old_setup/: run_all.sh
config/: README  WUR_hpc.cmake  annuna.cmake  archlinux.cmake  blizzard.cmake  cartesius.cmake  cartesius_GPU_surfsara.cmake  cartesius_easybuild.cmake  cartesius_netcdf4.cmake  casper.cmake  centos7.cmake  cheyenne.cmake  cumulus_gcc.cmake  default.cmake  delft.cmake  doxygen.conf.in  fedora.cmake  generic.cmake  halo.cmake  juqueen.cmake  lisa.cmake  lumi.cmake  macbook.cmake  macbook_apple_silicon.cmake  macbook_brew.cmake  macbook_brew_gcc.cmake  macbook_clang.cmake  macbookpro_intel.cmake  mistral_GPU.cmake  mpipc.cmake  mpipc_intel.cmake  owens.cmake  owens_17.cmake  owens_18.cmake  owens_gcc.cmake  snellius.cmake  snellius_nvhpc.cmake  supermuc.cmake  thunder.cmake  ubuntu.cmake  (+5 more)
doc/: coding_conventions.cxx  input.tex
eigen/: test.cxx  test_blas.cxx  test_eigen.cxx
include/: Data_block.h  advec.h  advec.h.temp  advec_2.h  advec_2i3.h  advec_2i4.h  advec_2i5.h  advec_2i52.h  advec_2i53.h  advec_2i5_kernels.cuh  advec_2i6.h  advec_2i62.h  advec_2int4.h  advec_4.h  advec_4m.h  advec_disabled.h  advec_g2.h  advec_g2i2.h  advec_g2i4.h  advec_g4.h  advec_g42.h  advec_g4m.h  advec_monotonic.h  aerosol.h  background_profs.h  boundary.h  boundary_bulk.h  boundary_cyclic.h  boundary_cyclic_kernels.h  boundary_lateral.h  boundary_lateral_kernels.h  boundary_outflow.h  boundary_patch.h  boundary_surface.h  boundary_surface_bulk.h  boundary_surface_functions.h  boundary_surface_kernels.h  boundary_surface_kernels_gpu.h  boundary_surface_lsm.h  boundary_surface_patch.h  (+152 more)
include_rrtmgp/: Array.h  Cloud_optics.h  Fluxes.h  Gas_concs.h  Gas_optics.h  Gas_optics_rrtmgp.h  Optical_props.h  Rte_lw.h  Rte_sw.h  Source_functions.h  define_bool.h  rrtmgp_kernels.h
kernel_tuner/: advec_2.py  advec_4.py  diff_4.cu  diff_4.py  diff_4_smem.py  helpers.py  statistics.py
kpp/: CMakeLists.txt  mhh_Function.c  mhh_Integrator.c  mhh_Jacobian.c  mhh_JacobianSP.c  mhh_LinearAlgebra.c  mhh_Parameters.h  mhh_Rates.cxx  mhh_Sparse.h  tm5_ifs_22_LinearAlgebra.c  tm5_ifs_22_Main.c  tm5_ifs_22_Monitor.c  tm5_ifs_22_Rates.c  tm5_ifs_22_StoichiomSP.c  tm5_ifs_22_mex_Fun.c  tm5_ifs_22_mex_Hessian.c  tm5_ifs_JacobianSP.c  tm5_ifs_Monitor.c  tm5_ifs_Util.c  tm5_ifs_mex_Hessian.c
main/: CMakeLists.txt  dns.cxx  init.cxx  microhh.cxx  microhh_single.cxx  stats.cxx
maxima/: 2ndordertaylor.wxm  4thordertaylor.wxm  4thordertaylorbc.wxm  4thordertaylorstencils.wxm
misc/: update_header.py
python/: 3D_to_nc.py  3d_to_nc.py  build_all.py  cross2nc.py  cross_to_nc.py  cross_to_nc_fast.py  cross_to_nc_fast_tqdm.py  eulerian_lagtraj.py  fix_overlapping_stats.py  loopdir.py  lsm_input.py  make3d.py  make3d_2.py  make3d_3.py  make3d_s.py  makeanim  makeanim2  makeanim_h264  makeanimframes.py  mhh_to_raytracer.py  microhh.py  microhh_lbc_tools.py  microhh_to_raytracer_input.py  microhh_tools.py  moser.py  spectralrand.py  xycross2nc.py  xycross2nc_all.py  xycross_to_nc.py  xycross_to_nc_surf.py  xzcross2nc.py  xzcross_to_nc.py  yzcross_to_nc.py
scaling/: scaling.py  strongscaling.1024.supermuc  strongscaling.2048.supermuc  weakscaling.juqueen  weakscaling.large.supermuc  weakscaling.small.supermuc
schemes/: 2ndorder.wxm  2ndorder_interpolation.wxm  2ndorder_pres.wxm  4thorder.wxm  4thorder2gc.wxm  4thorder_pres.wxm  4thordernoneq.wxm  4thordernoneq2gc.wxm  gradbcdir.py  gradbcdir_noneq.py  gradbcdirw.py  gradbcneu.py  interp.py  spectral.py
src/: CMakeLists.txt  Data_block.cxx  advec.cxx  advec.cxx.temp  advec.h  advec_2.cu  advec_2.cxx  advec_2_cuda.cu  advec_2i3.cu  advec_2i3.cxx  advec_2i4.cu  advec_2i4.cxx  advec_2i5.cu  advec_2i5.cxx  advec_2i52.cu  advec_2i52.cxx  advec_2i53.cu  advec_2i53.cxx  advec_2i6.cu  advec_2i6.cxx  advec_2i62.cu  advec_2i62.cxx  advec_2int4.cxx  advec_4.cu  advec_4.cxx  advec_4m.cu  advec_4m.cxx  advec_disabled.cxx  advec_g2.cxx  advec_g2i2.cxx  advec_g2i4.cxx  advec_g4.cxx  advec_g42.cxx  advec_g4m.cxx  aerosol.cu  aerosol.cxx  background_profs.cu  background_profs.cxx  boundary.cu  boundary.cxx  (+184 more)
src_rrtmg/: CMakeLists.txt  rrtmg_lw_wrapper.f90
src_rrtmgp/: CMakeLists.txt  Cloud_optics.cpp  Fluxes.cpp  Gas_concs.cpp  Gas_optics.cpp  Gas_optics_rrtmgp.cpp  Optical_props.cpp  Rte_lw.cpp  Rte_sw.cpp  Source_functions.cpp
src_rrtmgp_fortran/: CMakeLists.txt  mo_fluxes_broadband_kernels.F90  mo_fluxes_byband_kernels.F90  mo_gas_optics_kernels.F90  mo_optical_props_kernels.F90  mo_rrtmgp_util_reorder_kernels.F90  mo_rte_kind.F90  mo_rte_solver_kernels.F90  mo_rte_util_array.F90  mo_util_array.F90
test/: CMakeLists.txt  mpicheck.cxx  plotdump2d.py  simplempi.cxx  simplempiio.cxx  simplempiio2.cxx  testmpi.cxx
tools/: microhh.py  plot.py
tuner/: clean_wisdom.py  list_wisdom.py  plot_cache.py  tune.py
wisdom/: advec_2i5__advec_s_double.wisdom  advec_2i5__advec_s_double.wisdom.backup  advec_2i5__advec_s_float.wisdom  advec_2i5__advec_s_float.wisdom.backup  advec_2i5__advec_s_lim_double.wisdom  advec_2i5__advec_s_lim_double.wisdom.backup  advec_2i5__advec_s_lim_float.wisdom  advec_2i5__advec_s_lim_float.wisdom.backup  advec_2i5__advec_u_double.wisdom  advec_2i5__advec_u_double.wisdom.backup  advec_2i5__advec_u_float.wisdom  advec_2i5__advec_v_double.wisdom  advec_2i5__advec_v_double.wisdom.backup  advec_2i5__advec_v_float.wisdom  advec_2i5__advec_v_float.wisdom.backup  advec_2i5__advec_w_double.wisdom  (+87 more)
(+1109 files in other folders)
